修改目录结构

--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<!-- <%@ include file="common/header.jsp" %> -->
+
 	<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-<meta name="description" content="">
-<meta name="author" content="">
-<!-- Bootstrap core CSS -->
-<link href="css/bootstrap.min.css" rel="stylesheet">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-<!-- Custom styles for this template -->
-<link href="css/jquery.bxslider.css" rel="stylesheet">
-<link href="css/style.css" rel="stylesheet">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<!-- Bootstrap core CSS -->
+	<link href="lib/bootstrap/bootstrap.min.css" rel="stylesheet">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+	<!-- Custom styles for this template -->
+
+	<link href="css/style.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/normalize.css" />
-	<link rel="stylesheet" href="css/app.css">
+	<link rel="stylesheet" href="styles/index.css">
 	<link rel="icon" href="images/favicon.ico">
 	<title>首页</title>
 </head>
@@ -76,16 +74,13 @@
     </div>
 </nav>
 <div class="container">
-	<!--<header>
-		<a href="#"><img src="images/logo.png"></a>
-	</header> -->
 	<section class="main-slider">
 		<div class="slider">
 			<div class="slider-img">
 				<ul class="slider-img-ul">
 					<li><img src="images/creative1.jpg"><h2><a href="post.html" title="Vintage-Inspired Finds for Your Home">Vintage-Inspired Finds for Your Home</a></h2></li>
 					<li><img src="images/creative.jpg"></li>
-					<li><img src="images/1140x500-3.jpg"></li>
+					<li><img src="images/1140x500-2.jpg"></li>
 					<li><img src="images/creative1.jpg"></li>
 					<li><img src="images/creative.jpg"></li>
 				</ul>
@@ -146,9 +141,9 @@
 <!-- Bootstrap core JavaScript
     ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-<script src="js/jquery.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/jquery.bxslider.js"></script>
+<script src="lib/jquery/jquery.min.js"></script>
+<script src="lib/bootstrap/bootstrap.min.js"></script>
+
 <script src="js/mooz.scripts.min.js"></script>
 <script src="js/xSlider.js"></script>
 <script>
