--- a/public/index.html
+++ b/public/index.html
@@ -20,20 +20,6 @@
 
 <body>
 <!-- Navigation -->
-<!-- <%@ include file="common/menu.jsp" %> -->
-<style>
-    .dropdown-menu{
-        background-color: #222222;
-    }
-
-    .dropdown-menu>li>a{
-        color:#fff;
-    }
-
-	.main-slider{
-		margin-top: 80px;
-	}
-</style>
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
@@ -47,26 +33,24 @@
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                <li id="index"><a href="index.html">首页</a></li>
-                <li id="post"><a href="views/postList.html">成果展示</a></li>
+                <li id="post"><a href="views/postList.html">文章分享</a></li>
 				<li id="activityPage"><a href="views/activity.html">活动展示</a> </li>
                 <li id="resource"><a href="views/resource.html">资源下载</a></li>
 				<li id="commentPage"><a href="views/comments.html">讨论区</a></li>
-				<li><a href="views/markdownEditor.html">发布</a></li>
+				<li id="publish"><a href="views/markdownEditor.html">发布</a></li>
 				<li><a href="views/renwu.html">老师查看</a></li>
 			</ul>
 
             <ul class="nav navbar-nav navbar-right">
 
-                    <li id="userLink" class="dropdown"><a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">username <b class="caret"></b></a>
+                    <li id="userLink" class="dropdown"><a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown" id="username"><b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li><a href="views/myArticles.html">我的文章</a></li>
                             <li><a href="views/userInfo.html">个人档案</a></li>
                         </ul>
                     </li>
-                    <li><a href="views/login.html">退出</a></li>
-                    <li><a href="views/login.html">登录</a> </li>
-                    <li><a href="views/register.html">注册</a> </li>
-
+                    <li id="logout"><a href="views/login.html">退出</a></li>
+                    <li id="login"><a href="views/login.html">登录</a> </li>
             </ul>
 
         </div>
@@ -145,8 +129,7 @@
 <script src="lib/bootstrap/bootstrap.min.js"></script>
 
 <script src="js/xSlider.js"></script>
-<script>
-	$("#index").addClass("active");
-</script>
+<script src="scripts/nav.js"></script>
+<script src="scripts/index.js"></script>
 </body>
 </html>
