--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,7 @@
                         <ul class="dropdown-menu">
                             <li><a href="views/myArticles.html">我的文章</a></li>
                             <li><a href="views/userInfo.html">个人档案</a></li>
+							<li><a href="views/modifyPassword.html">修改密码</a></li>
                         </ul>
                     </li>
                     <li id="logout"><a href="views/login.html">退出</a></li>
