页面调整，除了发布页面菜单栏

--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
 							<li><a href="views/modifyPassword.html">修改密码</a></li>
                         </ul>
                     </li>
-                    <li id="logout"><a href="views/login.html">退出</a></li>
+                    <li id="logout"><a>退出</a></li>
                     <li id="login"><a href="views/login.html">登录</a> </li>
             </ul>
 
